# paulbot-rust

./: Cargo.toml  README.md  config.toml
src/: error.rs  lib.rs  main.rs  objects.rs  settings.rs
src/bot/: mod.rs
src/bot/commands/: meow.rs  mod.rs  pet.rs
src/data/: database.sql  image_db.rs  mod.rs  pool.rs
src/logic/: image_manager.rs  mod.rs
tests/: common.rs  image_manager_inte.rs
