[package]
name = "paulbot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.5"
log = "0.4.29"
tokio = { version = "1.50.0" , features = ["full", "rt", "rt-multi-thread", "macros"]}
colog = "1.4.0"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
rusqlite = { version="0.39.0", features = ["bundled"] }